# VINdex

./: .gitignore  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml
scripts/: init.sql
src/vindex/: __about__.py  main.py
src/vindex/api/: dependencies.py  routes.py
src/vindex/core/: config.py  database.py  exceptions.py
src/vindex/models/: vehicle.py
src/vindex/repository/: vehicle.py
src/vindex/schemas/: vehicle.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: schemas.py  test_vehicle.py
